# holochain-open-dev---membrane-roles

./: Cargo.toml
ui/: package-lock.json  package.json  rollup-bundle.config.js
ui/src/: bundle.ts  index.ts  membrane-roles.module.ts  membrane-roles.service.ts  types.ts
ui/src/elements/: hod-membrane-roles-manager.ts
ui/src/graphql/: queries.ts  resolvers.ts  schema.ts
ui/test/: graphql-middleware.test.js
ui/test/mocks/: membrane_roles.mock.js  setupApolloClient.js
zome/: Cargo.toml  README.md
zome/membrane_roles.dna.workdir/: dna.json
zome/tests/: logs.txt  package-lock.json  package.json
zome/tests/src/: index.ts
zome/workdir/dna/: HoloChess.dna  chess.dna  dna.yaml  hchess.dna  roles.dna
zome/workdir/happ/: chess.happ
zome/zomes/membrane_roles/: Cargo.toml
zome/zomes/membrane_roles/src/: admin.rs  assignment.rs  lib.rs  membrane_roles.rs  progenitor.rs  utils.rs
zome/zomes/profiles/: Cargo.toml
