[workspace]
members = [
  "zomes/membrane_roles",
  "zomes/profiles",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "8fa617e", package = "hdk3"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "8fa617e", package = "holo_hash"}
