[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
derive_more = "0"
serde = "1"

profiles = {git = "https://github.com/holochain-open-dev/profiles", branch = "main", package = "profiles"}
